# Arete

./: .env.example  .gitignore  LICENSE  MANUAL_MIGRATION.sql  OPTIMIZATION_PERSISTENCE.md  PRD.md  README.md  SCRIPTS_GUIDE.md  WINDOWS_SETUP.md  api-contracts.yaml  debug_github_integration.py  docker-compose.yml  e2e-validation-report.md  nul  playwright.config.ts  run_github_diagnostic.sh  run_github_tests.sh  setup.bat  system_validation.py  test_api_validation.py  test_cover_letter.py  test_github_integration.py  test_github_live.py  test_resume.txt  test_resume_github.txt  testing-agent-prompt.md
.kiro/Hackathon-Review/: demo_video_script.md  final-report.md  first-hackathon-review.md  improvement-plan.md  plan_of_improvement.md
.kiro/agents/: README.md  backend-agent-prompt.md  backend-agent.json  default.json  docs-commit-agent-prompt.md  docs-commit-agent.json  enhanced-orchestrator-prompt.md  frontend-agent-prompt.md  frontend-agent.json  infrastructure-agent-prompt.md  infrastructure-agent.json  testing-agent-prompt.md  testing-agent.json
.kiro/decisions/: 0001-vertical-slice-architecture.md  0002-litellm-abstraction.md  0003-supabase-vs-postgres.md  0004-two-stage-resume-parsing.md  0005-sse-streaming-vs-websockets.md  0006-reportlab-vs-weasyprint.md  0007-enhanced-orchestrator-strategy.md  0008-shadcn-ui-vs-material-ui.md  0009-docker-compose-vs-kubernetes.md  0010-react-hook-form-zod.md  0011-optimization-persistence.md  template.md
.kiro/devlog/: devlog-refactored.md  devlog.md  devlog_backup_original.md
.kiro/examples/: .env.sample  agent.py  docker-compose.yml  tools.py
.kiro/orchestration/: approval-gate-protocol.md  control-dashboard.md  mandatory-agent-gate.md  mandatory-research-protocol.md  quality-control.md
.kiro/prompts/: backend-job-analysis.md  frontend-job-analysis.md  frontend-style.md  update-devlog.md
.kiro/reference/: adding_tools_guide.md  feature-plan-template.md  how_my_workflow_and_agents_work.md  mvp-tool-designs.md  vsa-patterns.md
.kiro/research_documents/: agent_approach_architect.md  agents_explain.md
.kiro/review-plan-steps/: Review-Dust-Improvement-Plan.md
.kiro/scripts/: auto-analyze-project.sh  check-devlog-update.sh  orchestrator-status.sh  quick_validate.sh  sync-documentation.sh  sync-readme.py  validate-research.sh  validate_code_quality.py
.kiro/settings/: mcp.json
.kiro/steering/: product.md  structure.md  tech.md
.kiro/temp/: project-analysis.txt
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt  validation_report.json
backend/app/core/: config.py  database.py  llm.py
backend/app/export/: routes.py  schemas.py  service.py
backend/app/export/templates/: README.md  modern.css
backend/app/github/: routes.py  schemas.py  service.py
backend/app/jobs/: routes.py  schemas.py  service.py  test_integration.py  test_jobs.py
backend/app/optimization/: routes.py  schemas.py  service.py
backend/app/resume/: parser.py  routes.py  schemas.py
backend/tests/: conftest.py  test_resume_parser.py
backend/tests/integration/: test_jobs_integration.py
backend/tests/unit/: test_cover_letter.py  test_cover_letter_service.py  test_export_service.py  test_export_service_extended.py  test_github_service.py  test_job_service.py  test_llm.py  test_optimization_service.py  test_routes.py
docs/: API_KEYS.md  ARCHITECTURE.md  INSTALLATION.md  TROUBLESHOOTING.md
e2e/: complete-workflow.spec.ts
e2e/fixtures/: README.md
frontend/: .eslintrc.cjs  index.html  package.json  tailwind.config.js  vitest.setup.ts
frontend/src/: App.css  App.tsx
frontend/src/hooks/: useSSE.ts
frontend/test-results/: .last-run.json
frontend/tests/: github-integration.spec.ts
scripts/: disable_rls.py  setup.sh  setup_supabase.py  validate_env.py  verify_schema.py
scripts/database/: add_optimized_data_column.py
scripts/setup/: setup.sh  setup_supabase.py
scripts/validation/: frontend_validation.py  test_optimization_persistence.py  validate_wsl2.py
supabase/migrations/: 001_initial_schema.sql  002_disable_rls_for_mvp.sql  (+1 more)
(+38 files in other folders)
